--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: portfolio-service
 spec:
   type: NodePort
   selector:
-    app: MyApp
+    app: portfolio-website
   ports:
     - protocol: TCP
       port: 80
