--- a/.github/workflows/myproject-workflow.yaml
+++ b/.github/workflows/myproject-workflow.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -32,22 +32,46 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout code
-      uses: actions/checkout@v3
-      
-    - name: Deploy to EC2 with KIND
-      uses: appleboy/ssh-action@v0.1.5
+      uses: actions/checkout@v4
+    
+    - name: Deploy to KIND on EC2
+      uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
+        timeout: 120s
         script: |
           cd /home/ubuntu/myproject
-          sudo git pull origin main
-          sudo kubectl apply -f secrets.yaml
+          sudo git pull origin main || git clone https://github.com/MaheshTodkar1/Portfolio-website.git .
+          
+          # Set kubectl context
+          sudo kubectl config use-context kind-portfolio
+          
+          # Apply manifests (remove secrets.yaml since not needed)
           sudo kubectl apply -f deployment.yaml
           sudo kubectl apply -f service.yaml
-          sudo kubectl get pods
-          sudo kubectl get services
+          
+          # Wait for rollout
+          sudo kubectl rollout status deployment/website-deployment --timeout=120s
+
+
+
+      
+    #- name: Deploy to EC2 with KIND
+     # uses: appleboy/ssh-action@v0.1.5
+      #with:
+      #  host: ${{ secrets.EC2_HOST }}
+       # username: ${{ secrets.EC2_USER }}
+       # key: ${{ secrets.EC2_SSH_KEY }}
+       # script: |
+        #  cd /home/ubuntu/myproject
+         # sudo git pull origin main
+         # sudo kubectl apply -f secrets.yaml
+         # sudo kubectl apply -f deployment.yaml
+         # sudo kubectl apply -f service.yaml
+         # sudo kubectl get pods
+         # sudo kubectl get services
     
 
 
