--- a/.github/workflows/myproject-workflow.yaml
+++ b/.github/workflows/myproject-workflow.yaml
@@ -43,17 +43,17 @@ jobs:
         timeout: 120s
         script: |
           cd /home/ubuntu/myproject/Portfolio-website
-          sudo git pull origin main || git clone https://github.com/MaheshTodkar1/Portfolio-website.git .
+          git pull origin main || git clone https://github.com/MaheshTodkar1/Portfolio-website.git .
           
           # Set kubectl context
-          sudo kubectl config use-context kind-portfolio
+          kubectl config use-context kind-portfolio
           
           # Apply manifests (remove secrets.yaml since not needed)
-          sudo kubectl apply -f deployment.yaml
-          sudo kubectl apply -f service.yaml
+          kubectl apply -f deployment.yaml
+          kubectl apply -f service.yaml
           
           # Wait for rollout
-          sudo kubectl rollout status deployment/website-deployment --timeout=120s
+          kubectl rollout status deployment/website-deployment --timeout=120s
 
 
 
